--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "main": "app.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node app.js"
+    "start": "npm run build && node app.js",
+    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\""
   },
   "author": "Agysx",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^14.6.0"
+    "@types/express": "^4.17.7",
+    "@types/node": "^14.6.0",
+    "express": "^4.17.1",
+    "javascript-obfuscator": "^1.11.0"
+  },
+  "devDependencies": {
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   }
 }
